[package]
name = "protocol"
version = "0.1.0"
authors = ["Nokkasiili <46995454+Nokkasiili@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
byteorder = "1"
bytes = "1"
thiserror = "1"
num-traits = "0.2"
log="0.4"
md5="0.7"
serde_json = "1.0"
serde = { version = "1.0.104", features = ["derive"] }
