[package]
name = "proxy"
version = "0.1.0"
authors = ["Nokkasiili <46995454+Nokkasiili@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protocol = { path = "../protocol" }
async-executor = "1"
async-io = "1"
futures-lite = "1"
argh = "0.1"
anyhow = "1"
log = "0.4"
simple_logger = "1"
either = "1"
