[package]
name = "server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protocol = { path = "../protocol", package = "protocol" }
tokio = { version = "1", features = [ "full" ] }
serde = { version = "1", features = [ "derive" ] }
flume = "0.10"
log = "0.4"
serde_json = "1"
toml = "0.5"
anyhow = "1"
rand = "0.7"
md-5 = "0.9"
futures-lite = "1.11"
#slab = "0.4.3"
hyper = { version = "0.14", features = ["full"] }
urlencoding = "1.1.1"
env_logger = "0.10.1"
sharded-slab = "0.1.1"
slab = "0.4.9"
